complete pt.2 and fix spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "verdana";
+  margin-bottom: 20px;
 }
 
 #store-title {
@@ -17,4 +18,16 @@ h3 {
 .nav-link:hover {
   box-shadow: 0px 5px 9px rgba(115, 115, 115, .3);
 }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 79%;
+  height: 40px;
+  line-height: 40px;
+  background-color: #f5f5f5;
+}
+
+#txn-table {
+  margin-bottom: 40px;
 }
